crates/keron-lang/tests/corpus/errors/check/heterogeneous_list.keron
val xs = [1, "two", 3]
